<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>

    <string name="key_multiply">*</string>
    <string name="key_minus">-</string>
    <string name="key_plus">+</string>
    <string name="key_dot">.</string>
    <string name="key_equals">=</string>
    <string name="key_div">/</string>
    <string name="key_ac">AC</string>
    <string name="key_exponentiation">^</string>
    <string name="key_sqrt">√</string>
    <string name="key_parentheses">( )</string>

    <string name="key_module">%</string>
    <string name="key_settings">settings</string>

    <string name="purple_theme">Пурпурная тема</string>
    <string name="blue_theme">Голубая тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="display">Введите число</string>
    <string name="key_back"><![CDATA[<-]]></string>
</resources>