<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorActivity">

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_result"
        app:layout_constraintVertical_bias="0.95">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_clear"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:backgroundTint="@color/red"
            android:text="@string/key_ac" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_sqrt"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_sqrt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_exponentiation"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_exponentiation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_div"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_div" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multiply"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_back"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_equals"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_columnWeight="1"
            app:cornerRadius="@dimen/button_corner"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_digit_text_size"
            android:backgroundTint="@color/nice_green"
            android:text="@string/key_equals" />


    </GridLayout>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_result_txt"
        android:hint="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/result_text_size"
        android:textAlignment="textEnd" />

    <ImageButton
        android:id="@+id/key_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>